@@ -13,3 +13,4 @@ Hentai Moon - new site
 Hentaistream - new site
 Iflix - new site
 Palimas - fix Lookup info
+Porntrex - Changes in contextmenu (Lookup info)
